added models: vehiculo, oficial and infraccion

--- a/alembic/alembic.ini
+++ b/alembic/alembic.ini
@@ -60,7 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = %(DATABASE_URL)s
+# TODO: Usar variable de entorno DATABASE_URL de .env
+sqlalchemy.url = mysql+pymysql://root:passmysql@localhost:3306/my_db
 
 
 [post_write_hooks]
