--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,9 +24,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Set dummy env variables
+      run: echo "DATABASE_URL=sqlite:///:memory:" >> $GITHUB_ENV
+
     - name: Run tests
       run: |
         pytest
-
-        
 
