--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Run tests in Docker 
 
 on:
   push:
@@ -12,22 +12,19 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Install dependencies
+    - name: Build Docker image
+      run: docker-compose build
+
+    - name: Run tests inside container
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        docker-compose up -d
+        docker-compose exec -T app pytest
 
-    - name: Set dummy env variables
-      run: echo "DATABASE_URL=sqlite:///:memory:" >> $GITHUB_ENV
-
-    - name: Run tests
-      run: |
-        pytest
+    - name: Stop containers
+      run: docker-compose down
 
