--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,13 +18,13 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Build Docker image
-      run: docker-compose build
+      run: docker compose build
 
     - name: Run tests inside container
       run: |
-        docker-compose up -d
-        docker-compose exec -T app pytest
+        docker compose up -d
+        docker compose exec -T app pytest
 
     - name: Stop containers
-      run: docker-compose down
+      run: docker compose down
 
